# git_project

./: .coverage  .env.example  .gitignore  README.md  mylog.txt  pyproject.toml
src/: .env  count_operations_by_category.py  decorators.py  external_api.py  financial_transactions.py  generators.py  masks.py  mylog.txt  processing.py  read_tranzaction.py  utils.py  widget.py
tests/: mylog.txt  test_count_operations_by_category.py  test_decorators.py  test_external_api.py  test_financial_transactions.py  test_generators.py  test_mask_card.py  test_processing.py  test_search_transactions.py  test_utils.py  test_widget.py
